--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
 .div {
   display: flex;
-  width: 500px;
+  width: 700px;
   justify-content: space-between;
 }
 div {
   border: 2px solid black;
   width: 150px;
-  margin: 20px;
+  margin: 0 auto;
   padding: 10px;
 }
 
-.div2 {
+.silver {
+  background-color: silver;
+  text-align: center;
+}
+.bronze {
+  background-color: #cd7f32;
+  text-align: center;
+}
+.gold {
   background-color: gold;
   text-align: center;
 }
