--- a/style.css
+++ b/style.css
@@ -3,21 +3,25 @@
   width: 700px;
   justify-content: space-between;
 }
+
 div {
   border: 2px solid black;
   width: 150px;
   margin: 0 auto;
   padding: 10px;
+  text-align: center;
 }
 
 .silver {
   background-color: silver;
   text-align: center;
 }
+
 .bronze {
   background-color: #cd7f32;
   text-align: center;
 }
+
 .gold {
   background-color: gold;
   text-align: center;
